Revised changes so that the EstUniformDistAnalysis module now works

--- a/cstwMPC-HetReturns.ipynb
+++ b/cstwMPC-HetReturns.ipynb
@@ -8,13 +8,7 @@
     "\n",
     "- All of the text can be edited and rewritten\n",
     "- Add links/citations\n",
-    "- Check on the empirical targets, both in the CSTW paper/code/repo and recent measurements from the literature\n",
-    "- Find a way to produce graphical versions of the empirical results from the four papers on \"measuring heterogeneity in the rate of return\"\n",
-    "- Think more on other ways to compare the results of the notebook to the empirical results of the four papers\n",
-    "\n",
-    "- learn more about other possible distributional assumptions for the rate of return (with skewness and kurtosis) that are similar to the empirical data on the rate of return. See economics literature on distributional assumptions on the rate of return...\n",
-    "    - look for more papers that attempt to measure the rate of return to assets (consumer finance literature?)\n",
-    "- estimate the life-cycle version of the model (for the uniform and lognormal distribution as well... and potentially the distribution that I find in the literature)\n"
+    "- Check on the empirical targets, both in the CSTW paper/code/repo and recent measurements from the literature\n"
    ]
   },
   {
@@ -668,9 +662,6 @@
     "\n",
     "sim_wealth = EstimationEconomy.reap_state[\"aLvl\"][0]\n",
     "sim_Lorenz_points = get_lorenz_shares(sim_wealth, percentiles=pctiles)\n",
-    "\n",
-    "print(sim_wealth)\n",
-    "print(EstimationEconomy.reap_state[\"aLvl\"])\n",
     "\n",
     "# Plot\n",
     "plt.figure(figsize=(5, 5))\n",
@@ -9536,10 +9527,7 @@
     "    SCF_wealth, weights=SCF_weights, percentiles=pctiles\n",
     ")\n",
     "\n",
-    "#sim_wealth = np.asarray(EstimationEconomy.reap_state[\"aLvl\"]).flatten()\n",
     "sim_wealth_4 = np.concatenate(EstimationEconomy.reap_state[\"aLvl\"])\n",
-    "print(np.asarray(EstimationEconomy.reap_state[\"aLvl\"]).shape)\n",
-    "print(sim_wealth_4.shape)\n",
     "sim_Lorenz_points_4 = get_lorenz_shares(sim_wealth_4, percentiles=pctiles)\n",
     "\n",
     "plt.figure(figsize=(5, 5))\n",
@@ -9565,15 +9553,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.02076914 1.02457412 1.02837909 1.03218407 1.03598905 1.03979403\n",
-      " 1.04359901]\n"
+      "1.0455014939770673\n",
+      "1.0188666511136233\n"
      ]
     },
     {
@@ -9585,39 +9573,47 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Mean': 1.0321840725453453,\n",
+       " 'Standard Deviation': 0.007688816848516381,\n",
+       " 'Skewness': 0,\n",
+       " 'Kurtosis': -1.2}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from HARK.distribution import Uniform\n",
+    "import re\n",
     "\n",
-    "num_types = 7  # number of types we want\n",
-    "Rfree_mean = 1.0321840725453453  # center of Rfree distribution\n",
-    "Rfree_spread = 0.013317421431722095  # spread of Rfree distribution\n",
+    "from EstUniformDistAnalysis import EstUniformDist\n",
     "\n",
-    "est_Rfree_dstn = (\n",
-    "    Uniform(Rfree_mean - Rfree_spread, Rfree_mean + Rfree_spread)\n",
-    "    .discretize(num_types)\n",
-    "    .atoms.flatten()\n",
-    ")\n",
+    "PYUnif_RDist = EstUniformDist(\"/Users/dc/Library/CloudStorage/OneDrive-JohnsHopkins/research/GitHub-forks/econ-ark/DistributionOfWealthMPC/code/results/PYrrateDistIndNetWorthResults.txt\")\n",
     "\n",
-    "print(est_Rfree_dstn)\n",
-    "ax = plt.gca()\n",
-    "ax.set_ylim([0, 2])\n",
-    "plt.hist(est_Rfree_dstn,bins=num_types)\n",
-    "plt.show()"
+    "print(PYUnif_RDist.top)\n",
+    "print(PYUnif_RDist.bottom)\n",
+    "\n",
+    "PYUnif_RDist.graph()\n",
+    "\n",
+    "PYUnif_RDist.show_moments()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.99694785 1.00008263 1.00321742 1.0063522  1.00948699 1.01262177\n",
-      " 1.01575655]\n"
+      "1.0173239456582575\n",
+      "0.9953804568574657\n"
      ]
     },
     {
@@ -9629,23 +9625,30 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Mean': 1.0063522012578616,\n",
+       " 'Standard Deviation': 0.0063345395830483354,\n",
+       " 'Skewness': 0,\n",
+       " 'Kurtosis': -1.2}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "Rfree_LC_mean = 1.0063522012578616  # center of Rfree distribution\n",
-    "Rfree_LC_spread = 0.01097174439675312  # spread of Rfree distribution\n",
+    "LCUnif_RDist = EstUniformDist(\"/Users/dc/Library/CloudStorage/OneDrive-JohnsHopkins/research/GitHub-forks/econ-ark/DistributionOfWealthMPC/code/results/LCrrateDistIndNetWorthResults.txt\")\n",
     "\n",
-    "est_Rfree_LC_dstn = (\n",
-    "    Uniform(Rfree_LC_mean - Rfree_LC_spread, Rfree_LC_mean + Rfree_LC_spread)\n",
-    "    .discretize(num_types)\n",
-    "    .atoms.flatten()\n",
-    ")\n",
+    "print(LCUnif_RDist.top)\n",
+    "print(LCUnif_RDist.bottom)\n",
     "\n",
-    "print(est_Rfree_LC_dstn)\n",
-    "ax = plt.gca()\n",
-    "ax.set_ylim([0, 2])\n",
-    "plt.hist(est_Rfree_LC_dstn,bins=num_types)\n",
-    "plt.show()"
+    "LCUnif_RDist.graph()\n",
+    "\n",
+    "LCUnif_RDist.show_moments()"
    ]
   },
   {
@@ -9656,24 +9659,6 @@
     "\n",
     "![Image Description](/Users/dc/Library/CloudStorage/OneDrive-JohnsHopkins/research/GitHub-forks/econ-ark/DistributionOfWealthMPC/DistEmpReturnsFagereng.png)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Possible distributional assumptions for the rate of return\n",
-    "\n",
-    "* Pareto\n",
-    "* Weibull\n",
-    "* Beta\n",
-    "\n",
-    "    * Lognormal\n",
-    "    * Exponential\n",
-    "\n",
-    "Note, so far, only the Pareto distribution has been cited as a possible candidate of the distribution of returns.\n",
-    "\n",
-    "Although a typical assumption is that returns are lognormally distributed, based on the data from Fagereng et al., a negative skewness suggests that the lognormal distribution may not be the correct asssumption (much like the uniform distribution may not be correct due to it exhibiting a skewnesss value of 0). Lastly, although exponential distirbution seemed like a possible candidate due to its shape when comparing it to a graph of the data on the rate of return to safe assets from Fagereng et al., has constant, positive values of skewness and kurtosis. "
    ]
   },
   {
