Notebook comparing theoretical results to the solution/simulation

--- a/cstwMPC-HetReturns.ipynb
+++ b/cstwMPC-HetReturns.ipynb
@@ -9591,7 +9591,7 @@
    "source": [
     "import re\n",
     "\n",
-    "from EstUniformDistAnalysis import EstUniformDist\n",
+    "from code.estimateduniformstats import EstUniformDist\n",
     "\n",
     "PYUnif_RDist = EstUniformDist(\"/Users/dc/Library/CloudStorage/OneDrive-JohnsHopkins/research/GitHub-forks/econ-ark/DistributionOfWealthMPC/code/results/PYrrateDistIndNetWorthResults.txt\")\n",
     "\n",
