Some small changes to improve speed and more convincing results

--- a/HetReturns-Lognormal.ipynb
+++ b/HetReturns-Lognormal.ipynb
@@ -106,7 +106,7 @@
     "# Computes K/Y ratio for a wide range of beta; should have do_beta_dist = False\n",
     "find_beta_vs_KY = False\n",
     "# Uses a \"tractable consumer\" rather than solving full model when True\n",
-    "do_tractable = True\n",
+    "do_tractable = False\n",
     "\n",
     "# Solve for the $\\beta-Point$ (do_param_dist=False) for speed\n",
     "\"\"\"\n",
@@ -259,7 +259,7 @@
     "    \"do_lifecycle\": do_lifecycle,\n",
     "    \"do_agg_shocks\": do_agg_shocks,\n",
     "    \"do_liquid\": do_liquid,\n",
-    "    \"do_combo_estimation\": True,\n",
+    "    \"do_combo_estimation\": False,\n",
     "}\n",
     "\n",
     "\n",
@@ -340,6 +340,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot for the presentation\n",
+    "plt.figure(figsize=(5, 5))\n",
+    "plt.title(\"Wealth Distribution\")\n",
+    "plt.plot(pctiles, SCF_Lorenz_points, \"-k\", label=\"SCF\")\n",
+    "plt.plot(pctiles, sim_Lorenz_points, \"-.k\", label=\"R-Point\")\n",
+    "plt.plot(pctiles, sim_Lorenz_points_2, \"--k\", label=\"R-Dist\")\n",
+    "plt.plot(pctiles, pctiles, \"b-.\", label=\"45 Degree\")\n",
+    "plt.xlabel(\"Percentile of net worth\")\n",
+    "plt.ylabel(\"Cumulative share of wealth\")\n",
+    "plt.legend(loc=2)\n",
+    "plt.ylim([0, 1])\n",
+    "plt.show(\"wealth_distribution_2\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -356,12 +376,12 @@
    "source": [
     "import re\n",
     "\n",
-    "from code.estimatedlognormalstats import EstULogNormalDist\n",
+    "from code.estimatedlognormalstats import EstLogNormalDist\n",
     "\n",
     "PYLognrm_RDist = EstLogNormalDist(\"/Users/dc/Library/CloudStorage/OneDrive-JohnsHopkins/research/GitHub-forks/econ-ark/DistributionOfWealthMPC/DistributionOfWealthMPC/code/results/PYLognrmrrateDistIndNetWorthResults.txt\")\n",
     "\n",
-    "print(PYLognrm_RDist.top)\n",
-    "print(PYLognrm_RDist.bottom)\n",
+    "#print(PYLognrm_RDist.top)\n",
+    "#print(PYLognrm_RDist.bottom)\n",
     "\n",
     "PYLognrm_RDist.graph()\n",
     "\n",
@@ -374,15 +394,13 @@
    "source": [
     "### Graph of the empirical distribution of safe and risky returns from Fagereng et al. (2015)\n",
     "\n",
-    "![Image Description](/Users/dc/Library/CloudStorage/OneDrive-JohnsHopkins/research/GitHub-forks/econ-ark/DistributionOfWealthMPC/DistributionOfWealthMPC/DistEmpReturnsFagereng.png)\n",
+    "<img src=\"/Users/dc/Library/CloudStorage/OneDrive-JohnsHopkins/research/GitHub-forks/econ-ark/DistributionOfWealthMPC/DistributionOfWealthMPC/DistEmpReturnsFagereng.png\" alt=\"Description of image\" width=\"600\" height=\"500\">\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
