--- a/HetReturns-Unif-PY-LiqWealth.ipynb
+++ b/HetReturns-Unif-PY-LiqWealth.ipynb
@@ -59,87 +59,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Contributions from the CSTW paper\n",
-    "\n",
-    "### Heterogeneous Time Preferences\n",
-    "\n",
-    "In a model calibrated to match micro- and macroeconomic evidence on household income dynamics, (cite the CSTW paper) shows that a modest degree of heterogeneity in household preferences or beliefs is sufficient to match empirical measures of wealth inequality in the U.S. \n",
-    "\n",
-    "In cstwMPC, the authors calibrated nearly all of the model parameters-- risk aversion, income shock process, etc-- to commonly used or previously estimated values.  The only parameter to be estimated is the distribution of $\\beta$.  cstwMPC assumed that $\\beta$ is uniformly distributed on $[\\grave{\\beta}-\\nabla,\\grave{\\beta}+\\nabla]$, approximated by a seven point distribution.\n",
-    "\n",
-    "### Empirical Wealth Targets\n",
-    "\n",
-    "Their estimation procedure seeks the values of $\\grave{\\beta}$ and $\\nabla$ that generate a simulated distribution of wealth that best matches empirical U.S. data.  Their definition of \"best match\" has two aspects:\n",
-    "\n",
-    "1. The simulated aggregate capital-to-income ratio matches the true U.S. value.\n",
-    "2. The sum of squared distances between the simulated and empirical Lorenz curves (at the 20th, 40th, 60th, and 80th percentiles) is minimized (conditional on item 1).\n",
-    "\n",
-    "cstwMPC's target empirical moments are a capital-to-income ratio of 10.26 and cumulative wealth shares as given in the table below.  Yes, you are reading the table correctly: The \"poorest\" 80 percent of households own 17.5 percent of wealth.\n",
-    "\n",
-    "| Net worth percentile | Cumulative wealth share |\n",
-    "|:---:|:---:|\n",
-    "|  20th  | -0.2% |\n",
-    "|  40th  | 1.0% |\n",
-    "|  60th  | 5.5% |\n",
-    "|  80th  | 17.5% |\n",
-    "\n",
-    "For a description of the relevant notation and the optimization problem that households solve, see (Link to the CSTW notebook). Importantly, the estimation procedure in this paper will use the same empirical targets as those presented there."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Heterogeneous Rates of Return\n",
-    "\n",
-    "### Theoretical Motivation \n",
-    "\n",
-    "As discussed in the DemARK (link to Micro-and-Macro-Implications...), Buffer stock saving models of the kind implemented in $\\texttt{ConsIndShockType}$ say that, if a standard ['Growth Impatience Condition'](https://econ-ark.github.io/BufferStockTheory/#GICRaw), holds:\n",
-    "\n",
-    "\\begin{eqnarray}\n",
-    "\\newcommand{\\Rfree}{\\mathsf{R}}\\newcommand{\\DiscFac}{\\beta}\\newcommand{\\PermGroFac}{\\Gamma}\\newcommand{\\PermShk}{\\psi}\\newcommand{\\CRRA}{\\rho}\n",
-    "\\left(\\frac{(\\Rfree\\DiscFac)^{1/\\CRRA}\\mathbb{E}[\\PermShk^{-1}]}{\\PermGroFac}\\right) & < & 1\n",
-    "\\end{eqnarray}\n",
-    "\n",
-    "then the _ratio_ of asets $\\newcommand{\\aLev}{\\mathbf{a}}\\aLev$ to permanent income $\\newcommand{\\pLev}{\\mathbf{p}}\\pLev$, $a=\\aLev/\\pLev$, has a target value $\\newcommand{\\aTarg}{\\check{a}}\\aTarg$ that depends on the consumer's preferences (relative risk aversion $\\CRRA$, time preference $\\DiscFac$) and circumstances (interest factor $\\Rfree$, growth factor $\\PermGroFac$, uncertainty about permanent income shocks $\\sigma^{2}_{\\PermShk}$).\n",
-    "\n",
-    "If everyone had identical preferences and everyone were at their target $\\check{a}$, then inequality in the level of $\\aLev$ would be exactly the same as inequality in $\\pLev$. \n",
-    "\n",
-    "Moreover, since each of the parameters featured in this Growth Impatience Condition capture aspects of the household's optimal consumption-savings behavior, the assumption that households differ significantly in the value of one or many of these variables can potentially explain disparities in wealth accumulation over the life-cycle.\n",
-    "\n",
-    "### Empirical Evidence \n",
-    "\n",
-    "It is worth noting that the time preference factor $(\\beta)$ is one of the key parameters that influences an individual's equilibrium target level of market resources, but it is not directly observable. Therefore, in order to estimate $\\beta$, one would need to gather data through surveys or other methods that allow for the direct acquisition of information from households.\n",
-    "\n",
-    "On the other hand, estimating differences in the rate of return $(\\Rfree)$ to financial assets across households is possible, as this variable *is* directly observable. Recent empirical recent has exploited the usefulness novel, administrative and survey datasets on household asset holdings in an attempt to quantify the differences in returns among individuals. These datasets are \"novel\" in the sense that they are more representative of household finances than their U.S. counterparts, which are known to suffer from substantial measurement bias, especially at the top end of the wealth distribution. \n",
-    "\n",
-    "Among these recent empirical efforts are the following notable contributions (provide actual citation/links for each of these):\n",
-    "\n",
-    "1. Do the Rich Get Richer in the Stock Market? Evidence from India\n",
-    "2. Financial Literacy and Savings Account Returns\n",
-    "3. Rich Pickings? Risk, Return, and Skill in Household Wealth\n",
-    "4. Heterogeneity and Persistence in Returns to Wealth\n",
-    "\n",
-    "Not only do each of these papers provide motivation for the estimation of a buffer-stock savings model with ex-ante heterogeneity in the rate of return, but they also offer a baseline for evaluating the results of the procedure. That is, the distribution of rates of return which are produced in this notebook should be \"close\" to the empirical estimates presented in these papers.\n",
-    "\n",
-    "*In this notebook, the notion of \"closeness\" will be a graphical comparison. However, it is clear that a more mathematical description can be presented (much as the distance between the simulated and empirical Lorenz points are minimized).* (-revise this, could be said much better!)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Goals of this Notebook\n",
-    "\n",
-    "* Run the simplest specification of the estimation for Rfree\n",
-    "* Compare the results to CSTW... how \"close\" are the Lorenz sim points to the empirical counterpart?\n",
-    "* Compare the estimated distribution of Rfree to the \"empirical counterpart\" regarding heterogeneous returns, from the four empirical papers listed above"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -210,7 +129,7 @@
     "do_lifecycle = False  # Use lifecycle model if True, perpetual youth if False\n",
     "do_agg_shocks = False  # Solve the FBS aggregate shocks version of the model\n",
     "# Matches liquid assets data when True, net worth data when False\n",
-    "do_liquid = False"
+    "do_liquid = True"
    ]
   },
   {
@@ -336,7 +255,7 @@
     "do_param_dist = True  # Do param-dist version if True, param-point if False\n",
     "do_lifecycle = False  # Use lifecycle model if True, perpetual youth if False\n",
     "do_agg_shocks = False  # Solve the FBS aggregate shocks version of the model\n",
-    "do_liquid = False  # Matches liquid assets data when True, net worth data when False\n",
+    "do_liquid = True  # Matches liquid assets data when True, net worth data when False\n",
     "do_tractable = False  #"
    ]
   },
@@ -429,6 +348,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot for the presentation\n",
+    "plt.figure(figsize=(5, 5))\n",
+    "plt.title(\"Wealth Distribution\")\n",
+    "plt.plot(pctiles, SCF_Lorenz_points, \"-k\", label=\"SCF\")\n",
+    "plt.plot(pctiles, sim_Lorenz_points, \"-.k\", label=\"R-Point\")\n",
+    "plt.plot(pctiles, sim_Lorenz_points_2, \"--k\", label=\"R-Dist\")\n",
+    "plt.plot(pctiles, pctiles, \"b-.\", label=\"45 Degree\")\n",
+    "plt.xlabel(\"Percentile of net worth\")\n",
+    "plt.ylabel(\"Cumulative share of wealth\")\n",
+    "plt.legend(loc=2)\n",
+    "plt.ylim([0, 1])\n",
+    "plt.show(\"wealth_distribution_2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "MyGuys_First = EstimationEconomy.agents[0]\n",
     "MyGuys_First.check_conditions()\n",
     "print(MyGuys_First.bilt[\"conditions_report\"])"
@@ -443,26 +382,6 @@
     "MyGuys_Last= EstimationEconomy.agents[-1]\n",
     "MyGuys_Last.check_conditions()\n",
     "print(MyGuys_Last.bilt[\"conditions_report\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot for the presentation\n",
-    "plt.figure(figsize=(5, 5))\n",
-    "plt.title(\"Wealth Distribution\")\n",
-    "plt.plot(pctiles, SCF_Lorenz_points, \"-k\", label=\"SCF\")\n",
-    "plt.plot(pctiles, sim_Lorenz_points, \"-.k\", label=\"R-Point\")\n",
-    "plt.plot(pctiles, sim_Lorenz_points_2, \"--k\", label=\"R-Dist\")\n",
-    "plt.plot(pctiles, pctiles, \"b-.\", label=\"45 Degree\")\n",
-    "plt.xlabel(\"Percentile of net worth\")\n",
-    "plt.ylabel(\"Cumulative share of wealth\")\n",
-    "plt.legend(loc=2)\n",
-    "plt.ylim([0, 1])\n",
-    "plt.show(\"wealth_distribution_2\")"
    ]
   },
   {
@@ -484,67 +403,7 @@
     "\n",
     "from code.estimateduniformstats import EstUniformDist\n",
     "\n",
-    "PYUnif_RDist = EstUniformDist(\"/Users/dc/Library/CloudStorage/OneDrive-JohnsHopkins/research/GitHub-forks/econ-ark/DistributionOfWealthMPC/DistributionOfWealthMPC/code/results/PYUnifrrateDistIndNetWorthResults.txt\")\n",
-    "\n",
-    "print(PYUnif_RDist.top)\n",
-    "print(PYUnif_RDist.bottom)\n",
-    "\n",
-    "PYUnif_RDist.graph()\n",
-    "\n",
-    "PYUnif_RDist.show_moments()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "\n",
-    "from code.estimateduniformstats import EstUniformDist\n",
-    "\n",
-    "PYUnif_RDist = EstUniformDist(\"/Users/dc/Library/CloudStorage/OneDrive-JohnsHopkins/research/GitHub-forks/econ-ark/DistributionOfWealthMPC/DistributionOfWealthMPC/code/results/PYUnifrrateDistIndNetWorthResults.txt\")\n",
-    "\n",
-    "print(PYUnif_RDist.top)\n",
-    "print(PYUnif_RDist.bottom)\n",
-    "\n",
-    "PYUnif_RDist.graph()\n",
-    "\n",
-    "PYUnif_RDist.show_moments()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "\n",
-    "from code.estimateduniformstats import EstUniformDist\n",
-    "\n",
-    "PYUnif_RDist = EstUniformDist(\"/Users/dc/Library/CloudStorage/OneDrive-JohnsHopkins/research/GitHub-forks/econ-ark/DistributionOfWealthMPC/DistributionOfWealthMPC/code/results/PYUnifrrateDistIndNetWorthResults.txt\")\n",
-    "\n",
-    "print(PYUnif_RDist.top)\n",
-    "print(PYUnif_RDist.bottom)\n",
-    "\n",
-    "PYUnif_RDist.graph()\n",
-    "\n",
-    "PYUnif_RDist.show_moments()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "\n",
-    "from code.estimateduniformstats import EstUniformDist\n",
-    "\n",
-    "PYUnif_RDist = EstUniformDist(\"/Users/dc/Library/CloudStorage/OneDrive-JohnsHopkins/research/GitHub-forks/econ-ark/DistributionOfWealthMPC/DistributionOfWealthMPC/code/results/PYUnifrrateDistIndNetWorthResults.txt\")\n",
+    "PYUnif_RDist = EstUniformDist(\"/Users/dc/Library/CloudStorage/OneDrive-JohnsHopkins/research/GitHub-forks/econ-ark/DistributionOfWealthMPC/DistributionOfWealthMPC/code/results/PYUnifrrateDistIndLiquidResults.txt\")\n",
     "\n",
     "print(PYUnif_RDist.top)\n",
     "print(PYUnif_RDist.bottom)\n",
